k8s/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: net5-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloudflared
  namespace: net5-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cloudflared
  template:
    metadata:
      labels:
        app: cloudflared
    spec:
      containers:
        - name: cloudflared
          image: cloudflare/cloudflared:latest
          command: ["tunnel", "run"]
---
apiVersion: v1
kind: Service
metadata:
  name: cloudflared
  namespace: net5-app
spec:
  selector:
    app: cloudflared
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: net5-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:latest # Use your custom nginx image if necessary
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: net5-app
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: next-net5
  namespace: net5-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: next-net5
  template:
    metadata:
      labels:
        app: next-net5
    spec:
      containers:
        - name: next-net5
          image: "your-image-name:latest" # Specify your image
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: next-net5
  namespace: net5-app
spec:
  selector:
    app: next-net5
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000


---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cloudflared-to-nginx
  namespace: net5-app
spec:
  podSelector:
    matchLabels:
      app: nginx
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: cloudflared
    ports:
    - protocol: TCP
      port: 8080
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: nginx-to-next-net5
  namespace: net5-app
spec:
  podSelector:
    matchLabels:
      app: next-net5
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: nginx
    ports:
    - protocol: TCP
      port: 3000
